--- a/public/styles/BodyDiv.css
+++ b/public/styles/BodyDiv.css
@@ -28,10 +28,7 @@
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-body{
-    height: 100vh;
-    width: 100vw;
-}
+
 .logo{
    height: 10%;
 }
@@ -185,6 +182,11 @@ body{
 .pname span{
     overflow:hidden;
 }
+.bold-text{
+    display: inline-block;
+    height: 3%;
+    overflow: hidden;
+}
 
 #view-more-btn:hover {
     background-color: #e65100;
@@ -215,7 +217,7 @@ html,body{
 }
 
 
-.logo img{
+.nav-logo img{
     height: 8vh;
     width: auto;
 }
@@ -376,10 +378,10 @@ footer {
         grid-template-columns: auto auto;
         justify-content: space-between;
     }
-    .logo{
+    .nav-logo{
         width: 20vw;
     }
-    .logo img{
+    .nav-logo img{
         width: 100%;
     }
     #contact-us{
