--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -273,7 +273,7 @@ footer {
     }
 
     .search-box{
-        width: 80vw;
+        width: 80%;
         grid-row-start: 2;
         grid-column-start: 1;
         grid-column-end: 3;
