--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
     <!-- navbar and header -->
     <header>
         <div id="nav-bar">
-            <div class="logo">
+            <div class="nav-logo">
                 <img src="/image/logo2.png" alt="">
             </div>
             <div class="search-box">
@@ -120,7 +120,7 @@
                        
                     </div>
                     <div class='time'>
-                        <span class='delivery'>Free delivery</span> <span class='bold-text'><%=product.delivery%></span>
+                        <span class='bold-text'><%=product.delivery%></span>
                     </div>
                 </section>
                 <div class='link'>
